--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-STORAGE = "IN_MEMORY"
+STORAGE = "PostgreSQL"
+PORT = "5432"
+DB_HOST = "db"
+DB_PASSWORD ="postgres"
+DB_USER = "postgres"
+DB_NAME = "postgres"
